--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <body>
     <h1>Denise testing</h1>
 
-    <p>denise testing a branch </p>
-</body>
-
+    <p>denise testing a branch</p>
+    <h2>Annika testing</h2>
+  </body>
 </html>
-
