--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Winers</title>
-  </head>
 
-  <body>
-    <h1>Denise testing</h1>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>The Winers</title>
+</head>
 
-    <p>denise testing a branch</p>
-    <h2>Annika testing</h2>
-  </body>
+<body>
+  <h1>Denise testing</h1>
+
+  <p>denise testing a branch</p>
+  <h2>Annika testing</h2>
+  <p>new branch from denise</p>
+</body>
+
 </html>
