--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 </head>
 
 <body>
+
+    <header>
+        <ul>
+<li></li>
+<li></li>
+<li></li>
+
+        </ul>
+    </header>
   <h1>Denise testing</h1>
 
   <p>denise testing a branch</p>
