--- a/index.html
+++ b/index.html
@@ -5,22 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Winers</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
-    <header>
+    <nav>
+      <div class="logo"><a href="index.html">Wine</a></div>
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li><a href="index.html">home</a></li>
+        <li><a href="red.html">red</a></li>
+        <li><a href="white.html">white </a></li>
+        <li><a href="rose.html">rose</a></li>
+        <li><a href="about.html"> about </a></li>
       </ul>
-    </header>
-    <h1>Denise testing</h1>
-
-    <p>denise testing a branch</p>
-    <h2>Annika testing</h2>
-    <p>new branch from denise</p>
-    <p>hey</p>
-    <p>Annika test branch</p>
+    </nav>
   </body>
 </html>
