--- a/product.html
+++ b/product.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product</title>
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
-
-</body>
-
+  <body>
+    <div class="productinfo">
+      <div class="picture"></div>
+      <div class="infomation">
+        <h1>Porta 6 Tejo</h1>
+        <h3>2020</h3>
+        <span id="locationpin"
+          >...
+          <p>Portugal, Tejo</p></span
+        >
+        <p class="describe">
+          This is the most Portuguese thing you will find on the Mosel. Two
+          grapes varieties that thrive in the slate valley of the Douro, Arinto
+          & Fernao Pires which the magical winemaker Jan Klein has turned into a
+          yeasty smooth as good as a Portuguese egg tart - Pet Nat!
+        </p>
+        <span id="shortinfo">Percentage 13% | Size 750 ml | Sparkling</span>
+      </div>
+    </div>
+  </body>
 </html>
