--- a/index.html
+++ b/index.html
@@ -19,63 +19,75 @@
         <li><a href="about.html"> about </a></li>
       </ul>
     </nav>
-  </body>
-</html>
-
 
     <main>
-  <h1 class="wineh1">A Wine Guide For The Youth</h1>
-<p class="introtext">
-    Lorem Ipsum er ganske enkelt fyldtekst fra print- og typografiindustrien. Lorem Ipsum har været standard fyldtekst siden 1500-tallet, hvor en ukendt trykker sammensatte en tilfældig spalte for at trykke en bog til sammenligning af forskellige skrifttyper. Lorem Ipsum har ikke alene overlevet fem århundreder, men har også vundet indpas i elektronisk typografi uden væsentlige ændringer. Sætningen blev gjordt kendt i 1960'erne med lanceringen af Letraset-ark, som indeholdt afsnit med Lorem Ipsum, og senere med layoutprogrammer som Aldus PageMaker, som også indeholdt en udgave af Lorem Ipsum.
-</p>
-  <h2 class="categoryh2">Categories</h2>
+      <h1 class="wineh1">A Wine Guide For The Youth</h1>
+      <p class="introtext">
+        Lorem Ipsum er ganske enkelt fyldtekst fra print- og
+        typografiindustrien. Lorem Ipsum har været standard fyldtekst siden
+        1500-tallet, hvor en ukendt trykker sammensatte en tilfældig spalte for
+        at trykke en bog til sammenligning af forskellige skrifttyper. Lorem
+        Ipsum har ikke alene overlevet fem århundreder, men har også vundet
+        indpas i elektronisk typografi uden væsentlige ændringer. Sætningen blev
+        gjordt kendt i 1960'erne med lanceringen af Letraset-ark, som indeholdt
+        afsnit med Lorem Ipsum, og senere med layoutprogrammer som Aldus
+        PageMaker, som også indeholdt en udgave af Lorem Ipsum.
+      </p>
+      <h2 class="categoryh2">Categories</h2>
 
-  <div class="container">
-    <div class="card">
-        <div class="face face1">
+      <div class="container">
+        <div class="card">
+          <div class="face face1">
             <div class="content">
-                <img src="/img/redwine_white.svg">
-                <h3>Red Wine</h3>
+              <img src="/img/redwine_white.svg" />
+              <h3>Red Wine</h3>
             </div>
-        </div>
-        <div class="face face2">
+          </div>
+          <div class="face face2">
             <div class="content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
-                <button class="custom-btn btn-16">Read More</button>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                cum cumque minus iste veritatis provident at.
+              </p>
+              <button class="custom-btn btn-16">Read More</button>
             </div>
+          </div>
         </div>
-    </div>
-    <div class="card">
-        <div class="face face1">
+        <div class="card">
+          <div class="face face1">
             <div class="content">
-                <img src="/img/whitewine_white.svg">
-                <h3>White Wine</h3>
+              <img src="/img/whitewine_white.svg" />
+              <h3>White Wine</h3>
             </div>
-        </div>
-        <div class="face face2">
+          </div>
+          <div class="face face2">
             <div class="content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
-                <button class="custom-btn btn-16">Read More</button>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                cum cumque minus iste veritatis provident at.
+              </p>
+              <button class="custom-btn btn-16">Read More</button>
             </div>
+          </div>
         </div>
-    </div>
-    <div class="card">
-        <div class="face face1">
+        <div class="card">
+          <div class="face face1">
             <div class="content">
-                <img src="/img/sparkling.svg">
-                <h3>Sparkling</h3>
+              <img src="/img/sparkling.svg" />
+              <h3>Sparkling</h3>
             </div>
-        </div>
-        <div class="face face2">
+          </div>
+          <div class="face face2">
             <div class="content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
-                <button class="custom-btn btn-16">Read More</button>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                cum cumque minus iste veritatis provident at.
+              </p>
+              <button class="custom-btn btn-16">Read More</button>
             </div>
+          </div>
         </div>
-    </div>
-</div>
-</main>
-  
-</body>
-
+      </div>
+    </main>
+  </body>
 </html>
