--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
 
-  <body>
+  <header>
     <nav>
       <div class="logo"><a href="index.html">Wine</a></div>
       <ul>
@@ -19,7 +19,9 @@
         <li><a href="about.html"> about </a></li>
       </ul>
     </nav>
+  </header>
 
+  <body>
     <main>
       <h1 class="wineh1">A Wine Guide For The Youth</h1>
       <p class="introtext">
