--- a/product.html
+++ b/product.html
@@ -6,26 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="productpage.css" />
   </head>
 
   <body>
-    <div class="productinfo">
-      <div class="picture"></div>
-      <div class="infomation">
-        <h1>Porta 6 Tejo</h1>
-        <h3>2020</h3>
-        <span id="locationpin"
-          >...
-          <p>Portugal, Tejo</p></span
-        >
-        <p class="describe">
-          This is the most Portuguese thing you will find on the Mosel. Two
-          grapes varieties that thrive in the slate valley of the Douro, Arinto
-          & Fernao Pires which the magical winemaker Jan Klein has turned into a
-          yeasty smooth as good as a Portuguese egg tart - Pet Nat!
-        </p>
-        <span id="shortinfo">Percentage 13% | Size 750 ml | Sparkling</span>
+    <nav>
+      <div class="logo"><a href="index.html">Wine</a></div>
+      <ul>
+        <li><a href="index.html">home</a></li>
+        <li><a href="red.html">red</a></li>
+        <li><a href="white.html">white </a></li>
+        <li><a href="rose.html">rose</a></li>
+        <li><a href="about.html"> about </a></li>
+      </ul>
+    </nav>
+    <main>
+      <div class="productinfo">
+        <div class="picture">
+          <img src="img/Stéphane Delettre - Chardons.png" alt="wine" />
+        </div>
+        <div class="infomation">
+          <h1>Porta 6 Tejo</h1>
+          <h3>2020</h3>
+          <span id="locationpin"
+            >...
+            <p>Portugal, Tejo</p></span
+          >
+          <p class="describe">
+            This is the most Portuguese thing you will find on the Mosel. Two
+            grapes varieties that thrive in the slate valley of the Douro,
+            Arinto & Fernao Pires which the magical winemaker Jan Klein has
+            turned into a yeasty smooth as good as a Portuguese egg tart - Pet
+            Nat!
+          </p>
+          <span id="shortinfo">Percentage 13% | Size 750 ml | Sparkling</span>
+        </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
