--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
     <main>
       <h1 class="wineh1">A Wine Guide For The Youth</h1>
       <p class="introtext">
-        Lorem Ipsum er ganske enkelt fyldtekst fra print- og
-        typografiindustrien. Lorem Ipsum har været standard fyldtekst siden
-        1500-tallet, hvor en ukendt trykker sammensatte en tilfældig spalte for
-        at trykke en bog til sammenligning af forskellige skrifttyper. Lorem
-        Ipsum har ikke alene overlevet fem århundreder, men har også vundet
-        indpas i elektronisk typografi uden væsentlige ændringer. Sætningen blev
-        gjordt kendt i 1960'erne med lanceringen af Letraset-ark, som indeholdt
-        afsnit med Lorem Ipsum, og senere med layoutprogrammer som Aldus
-        PageMaker, som også indeholdt en udgave af Lorem Ipsum.
+        Lorem Ipsum is simply dummy text of the printing and typesetting
+        industry. Lorem Ipsum has been the industry's standard dummy text ever
+        since the 1500s, when an unknown printer took a galley of type and
+        scrambled it to make a type specimen book. It has survived not only five
+        centuries, but also the leap into electronic typesetting, remaining
+        essentially unchanged. It was popularised in the 1960s with the release
+        of Letraset sheets containing Lorem Ipsum passages, and more recently
+        with desktop publishing software like Aldus PageMaker including versions
+        of Lorem Ipsum.
       </p>
       <h2 class="categoryh2">Categories</h2>
 
