--- a/product.html
+++ b/product.html
@@ -8,6 +8,7 @@
     <title>Product</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="productpage.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/fgj3jvj.css">
 </head>
 
 <body>
