fixed grid and renamed links in nav

--- a/productlist.html
+++ b/productlist.html
@@ -1,9 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product List</title>
-  </head>
+    <link rel="stylesheet" href="style.css">
+</head>
+<header>
+    <nav>
+      <div class="logo"><a href="index.html">Wine</a></div>
+      <ul>
+        <li><a href="index.html">home</a></li>
+        <li><a href="productlist.html?redwine">red</a></li>
+        <li><a href="productlist.html?whitewine">white </a></li>
+        <li><a href="productlist.html?rose">rose</a></li>
+        <li><a href="about.html"> about </a></li>
+      </ul>
+    </nav>
+  </header>
+<body>
+    <h2>Red Wines</h2>
+    <main class="products">
+        <!-- <template id="smallProductTemplate">--->
+        <article class="smallProduct"><a href="product.html?id=613625d2d943be7d0009fcbc">
+                <img class="image" src="" alt="Stéphane Delettre - Chardons" /></a>
+                <h3>Stéphane Delettre - Chardons</h3>
+                <p class="region">Loire, Frankrig</p>
+                <p class="price"> DKK 189,-</p>
+                <p class="grape">Verdejo</p>
+                <a href="product.html?id=613625d2d943be7d0009fcbc">Learn More</a>
+        </article>
+        <article class="smallProduct"><a href="product.html?id=613625d2d943be7d0009fcbc">
+                <img class="image" src="" alt="Stéphane Delettre - Chardons" /></a>
+                <h3>Stéphane Delettre - Chardons</h3>
+                <p class="region">Loire, Frankrig</p>
+                <p class="price"> DKK 189,-</p>
+                <p class="grape">Verdejo</p>
+                <a href="product.html?id=613625d2d943be7d0009fcbc">Learn More</a>
+        </article>
+
+        <article class="smallProduct"><a href="product.html?id=613625d2d943be7d0009fcbc">
+                 <img class="image" src="" alt="Stéphane Delettre - Chardons" /></a>
+                <h3>Stéphane Delettre - Chardons</h3>
+                <p class="region">Loire, Frankrig</p>
+                <p class="price"> DKK 189,-</p>
+                <p class="grape">Verdejo</p>
+                <a href="product.html?id=613625d2d943be7d0009fcbc">Learn More</a>
+
+        </article>
+                    <article class="smallProduct"><a href="product.html?id=613625d2d943be7d0009fcbc">
+                            <img class="image" src="" alt="Stéphane Delettre - Chardons" /></a>
+                        <h3>Stéphane Delettre - Chardons</h3>
+                        <p class="region">Loire, Frankrig</p>
+                        <p class="price"> DKK 189,-</p>
+                        <p class="grape">Verdejo</p>
+                        <a href="product.html?id=613625d2d943be7d0009fcbc">Learn More</a>
+                    </article>            
+
+
+
+                        <article class="smallProduct"><a href="product.html?id=613625d2d943be7d0009fcbc">
+                                <img class="image" src="" alt="Stéphane Delettre - Chardons" /></a>
+                            <h3>Stéphane Delettre - Chardons</h3>
+                            <p class="region">Loire, Frankrig</p>
+                            <p class="price"> DKK 189,-</p>
+                            <p class="grape">Verdejo</p>
+                            <a href="product.html?id=613625d2d943be7d0009fcbc">Learn More</a>
+                        
+                        </article>
+
+                            <article class="smallProduct"><a href="product.html?id=613625d2d943be7d0009fcbc">
+                                    <img class="image" src="" alt="Stéphane Delettre - Chardons" /></a>
+                                <h3>Stéphane Delettre - Chardons</h3>
+                                <p class="region">Loire, Frankrig</p>
+                                <p class="price"> DKK 189,-</p>
+                                <p class="grape">Verdejo</p>
+
+
+                                <a href="product.html?id=613625d2d943be7d0009fcbc">Learn More</a>
+                            </article>
+                            <!--</template>-->
+</body>
+
 </html>
