--- a/product.html
+++ b/product.html
@@ -8,7 +8,6 @@
     <title>Product</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="productpage.css" />
-    <link rel="stylesheet" href="https://use.typekit.net/fgj3jvj.css">
 </head>
 
 <body>
@@ -34,27 +33,27 @@
         </article>
         <section class="purchaseBox">
             <h1 class="name">Porta 6 Tejo</h1>
-                <p class="subtle">Portugal, Tejo</p>
-                <p class="describe">
-                    This is the most Portuguese thing you will find on the Mosel. Two grapes varieties that thrive in
-                    the slate valley of the Douro, Arinto & Fernao Pires which the magical winemaker Jan Klein has
-                    turned into a yeasty smooth as good as a Portuguese egg tart - Pet Nat!
-                </p>
+            <p class="subtle">Portugal, Tejo</p>
+            <p class="describe">
+                This is the most Portuguese thing you will find on the Mosel. Two grapes varieties that thrive in
+                the slate valley of the Douro, Arinto & Fernao Pires which the magical winemaker Jan Klein has
+                turned into a yeasty smooth as good as a Portuguese egg tart - Pet Nat!
+            </p>
 
 
-                <section class="info">
-                    <h2>Product Information</h2>
-                    <dl>
-                        <dt>Percentage</dt>
-                        <dd class="percentage">13%</dd>
-                        <dt>Size</dt>
-                        <dd class="size">750 ml</dd>
-                        <dt>Texture</dt>
-                        <dd class="texture">normal</dd>
-                    </dl>
-                    <h3>Price</h3>
-                    <h2 class="price">129DKK</h2>
-                </section>
+            <section class="info">
+                <h2>Product Information</h2>
+
+                <h4>Percentage</h4>
+                <p class="percentage">13%</p>
+                <h4>Size</h4>
+                <p class="size">750 ml</p>
+                <h4>Texture</h4>
+                <p class="texture">normal</p>
+
+                <h3>Price</h3>
+                <h2 class="price">129DKK</h2>
+            </section>
         </section>
         <script src="product.js"></script>
     </body>
