--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
                 cum cumque minus iste veritatis provident at.
               </p>
-              <button class="custom-btn btn-16">Read More </button> 
+              <a href="productlist.html" class="custom-btn">Read More </a> 
             </div>
           </div>
         </div>
@@ -69,7 +69,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
                 cum cumque minus iste veritatis provident at.
               </p>
-              <button class="custom-btn btn-16">Read More</button>
+              <a href="productlist.html" class="custom-btn">Read More</a>
             </div>
           </div>
         </div>
@@ -86,7 +86,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
                 cum cumque minus iste veritatis provident at.
               </p>
-              <button class="custom-btn btn-16">Read More</button>
+              <a href="productlist.html" class="custom-btn">Read More</a>
             </div>
           </div>
         </div>
