javascript first try

--- a/product.html
+++ b/product.html
@@ -33,12 +33,9 @@
         </article>
         <section class="purchaseBox">
             <h1 class="name">Porta 6 Tejo</h1>
-            <p class="subtle">Portugal, Tejo</p>
-            <p class="describe">
-                This is the most Portuguese thing you will find on the Mosel. Two grapes varieties that thrive in
-                the slate valley of the Douro, Arinto & Fernao Pires which the magical winemaker Jan Klein has
-                turned into a yeasty smooth as good as a Portuguese egg tart - Pet Nat!
-            </p>
+            <h2 class="year">2020</h2>
+            <h4 class="subtle">Portugal, Tejo</h4>
+            <h4 class="grape">Sauvignon</h4>
 
 
             <section class="info">
@@ -47,15 +44,13 @@
                 <h4>Percentage</h4>
                 <p class="percentage">13%</p>
                 <h4>Size</h4>
-                <p class="size">750 ml</p>
-                <h4>Texture</h4>
-                <p class="texture">normal</p>
+                <p class="color">Red</p>
 
                 <h3>Price</h3>
-                <h2 class="price">129DKK</h2>
+                <h1 class="price">129DKK</h1>
             </section>
         </section>
-        <script src="product.js"></script>
+        <script src="main.js"></script>
     </body>
 
 </html>
