--- a/productlist.html
+++ b/productlist.html
@@ -7,81 +7,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product List</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/fgj3jvj.css" />
 </head>
 <header>
     <nav>
-      <div class="logo"><a href="index.html">Wine</a></div>
-      <ul>
-        <li><a href="index.html">home</a></li>
-        <li><a href="productlist.html?redwine">red</a></li>
-        <li><a href="productlist.html?whitewine">white </a></li>
-        <li><a href="productlist.html?rose">rose</a></li>
-        <li><a href="about.html"> about </a></li>
-      </ul>
+        <div class="logo"><a href="index.html">Wine</a></div>
+        <ul>
+            <li><a href="index.html">home</a></li>
+            <li><a href="productlist.html?redwine">red</a></li>
+            <li><a href="productlist.html?whitewine">white </a></li>
+            <li><a href="productlist.html?rose">rose</a></li>
+            <li><a href="about.html"> about </a></li>
+        </ul>
     </nav>
-  </header>
+</header>
+
 <body>
-    <h2>Red Wines</h2>
+    <h1 class="productlist">Red Wines</h1>
     <main class="products">
         <!-- <template id="smallProductTemplate">--->
         <article class="smallProduct"><a href="product.html?id=613625d2d943be7d0009fcbc">
-                <img class="image" src="" alt="Stéphane Delettre - Chardons" /></a>
+                <img class="image" src="" alt="Stéphane Delettre - Chardons" />
                 <h3>Stéphane Delettre - Chardons</h3>
-                <p class="region">Loire, Frankrig</p>
-                <p class="price"> DKK 189,-</p>
-                <p class="grape">Verdejo</p>
-                <a href="product.html?id=613625d2d943be7d0009fcbc">Learn More</a>
+            </a>
+            <p class="region">Loire, Frankrig</p>
+            <p class="grape">Verdejo</p>
+            <p class="price"> DKK 189-</p>
+
         </article>
         <article class="smallProduct"><a href="product.html?id=613625d2d943be7d0009fcbc">
-                <img class="image" src="" alt="Stéphane Delettre - Chardons" /></a>
+                <img class="image" src="" alt="Stéphane Delettre - Chardons" />
                 <h3>Stéphane Delettre - Chardons</h3>
-                <p class="region">Loire, Frankrig</p>
-                <p class="price"> DKK 189,-</p>
-                <p class="grape">Verdejo</p>
-                <a href="product.html?id=613625d2d943be7d0009fcbc">Learn More</a>
+            </a>
+            <p class="region">Loire, Frankrig</p>
+            <p class="price"> DKK 189,-</p>
+            <p class="grape">Verdejo</p>
         </article>
 
         <article class="smallProduct"><a href="product.html?id=613625d2d943be7d0009fcbc">
-                 <img class="image" src="" alt="Stéphane Delettre - Chardons" /></a>
+                <img class="image" src="" alt="Stéphane Delettre - Chardons" />
                 <h3>Stéphane Delettre - Chardons</h3>
-                <p class="region">Loire, Frankrig</p>
-                <p class="price"> DKK 189,-</p>
-                <p class="grape">Verdejo</p>
-                <a href="product.html?id=613625d2d943be7d0009fcbc">Learn More</a>
+            </a>
+            <p class="region">Loire, Frankrig</p>
+            <p class="price"> DKK 189,-</p>
+            <p class="grape">Verdejo</p>
 
         </article>
-                    <article class="smallProduct"><a href="product.html?id=613625d2d943be7d0009fcbc">
-                            <img class="image" src="" alt="Stéphane Delettre - Chardons" /></a>
-                        <h3>Stéphane Delettre - Chardons</h3>
-                        <p class="region">Loire, Frankrig</p>
-                        <p class="price"> DKK 189,-</p>
-                        <p class="grape">Verdejo</p>
-                        <a href="product.html?id=613625d2d943be7d0009fcbc">Learn More</a>
-                    </article>            
+        <article class="smallProduct"><a href="product.html?id=613625d2d943be7d0009fcbc">
+                <img class="image" src="" alt="Stéphane Delettre - Chardons" />
+                <h3>Stéphane Delettre - Chardons</h3>
+            </a>
+            <p class="region">Loire, Frankrig</p>
+            <p class="price"> DKK 189,-</p>
+            <p class="grape">Verdejo</p>
+        </article>
 
 
 
-                        <article class="smallProduct"><a href="product.html?id=613625d2d943be7d0009fcbc">
-                                <img class="image" src="" alt="Stéphane Delettre - Chardons" /></a>
-                            <h3>Stéphane Delettre - Chardons</h3>
-                            <p class="region">Loire, Frankrig</p>
-                            <p class="price"> DKK 189,-</p>
-                            <p class="grape">Verdejo</p>
-                            <a href="product.html?id=613625d2d943be7d0009fcbc">Learn More</a>
-                        
-                        </article>
+        <article class="smallProduct"><a href="product.html?id=613625d2d943be7d0009fcbc">
+                <img class="image" src="" alt="Stéphane Delettre - Chardons" />
+                <h3>Stéphane Delettre - Chardons</h3>
+            </a>
+            <p class="region">Loire, Frankrig</p>
+            <p class="price"> DKK 189,-</p>
+            <p class="grape">Verdejo</p>
 
-                            <article class="smallProduct"><a href="product.html?id=613625d2d943be7d0009fcbc">
-                                    <img class="image" src="" alt="Stéphane Delettre - Chardons" /></a>
-                                <h3>Stéphane Delettre - Chardons</h3>
-                                <p class="region">Loire, Frankrig</p>
-                                <p class="price"> DKK 189,-</p>
-                                <p class="grape">Verdejo</p>
+        </article>
+
+        <article class="smallProduct"><a href="product.html?id=613625d2d943be7d0009fcbc">
+                <img class="image" src="" alt="Stéphane Delettre - Chardons" />
+                <h3>Stéphane Delettre - Chardons</h3>
+            </a>
+            <p class="region">Loire, Frankrig</p>
+            <p class="price"> DKK 189,-</p>
+            <p class="grape">Verdejo</p>
 
 
-                                <a href="product.html?id=613625d2d943be7d0009fcbc">Learn More</a>
-                            </article>
-                            <!--</template>-->
+        </article>
+        <!--</template>-->
 </body>
 
 </html>
