--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <div class="face face1">
             <div class="content">
               <img src="/img/sparkling.svg" />
-              <h3>Sparkling</h3>
+              <h3>Rose Wine</h3>
             </div>
           </div>
           <div class="face face2">
