updated css and footer

--- a/productlist.html
+++ b/productlist.html
@@ -25,7 +25,6 @@
 <body>
     <h1 class="productlist">Red Wines</h1>
     <main class="products">
-        <!-- <template id="smallProductTemplate">--->
         <article class="smallProduct"><a href="product.html?id=613625d2d943be7d0009fcbc">
                 <img class="image" src="" alt="Stéphane Delettre - Chardons" />
                 <h3>Stéphane Delettre - Chardons</h3>
@@ -84,7 +83,11 @@
 
 
         </article>
-        <!--</template>-->
+    </main>
+    <footer>
+        <p>Terms & Conditions | Privacy | Legal Notice</p>
+    </footer>
+
 </body>
 
 </html>
