javascript latest update

--- a/product.html
+++ b/product.html
@@ -16,8 +16,8 @@
         <ul>
             <li><a href="index.html">home</a></li>
             <li><a href="productlist.html?redwine">red</a></li>
-        <li><a href="productlist.html?whitewine">white </a></li>
-        <li><a href="productlist.html?rose">rose</a></li>
+            <li><a href="productlist.html?whitewine">white </a></li>
+            <li><a href="productlist.html?rose">rose</a></li>
             <li><a href="about.html"> about </a></li>
         </ul>
     </nav>
@@ -37,17 +37,18 @@
             <h4 class="subtle">Portugal, Tejo</h4>
             <h4 class="grape">Sauvignon</h4>
 
-
+            <h2>Product Information</h2>
             <section class="info">
-                <h2>Product Information</h2>
 
                 <h4>Percentage</h4>
                 <p class="percentage">13%</p>
                 <h4>Size</h4>
                 <p class="color">Red</p>
 
-                <h3>Price</h3>
-                <h1 class="price">129DKK</h1>
+                <div class="pricing">
+                    <h3>Price</h3>
+                    <h1 class="price">129DKK</h1>
+                </div>
             </section>
         </section>
         <script src="main.js"></script>
