--- a/product.html
+++ b/product.html
@@ -17,8 +17,8 @@
         <ul>
             <li><a href="index.html">home</a></li>
             <li><a href="productlist.html?redwine">red</a></li>
-        <li><a href="productlist.html?whitewine">white </a></li>
-        <li><a href="productlist.html?rose">rose</a></li>
+            <li><a href="productlist.html?whitewine">white </a></li>
+            <li><a href="productlist.html?rose">rose</a></li>
             <li><a href="about.html"> about </a></li>
         </ul>
     </nav>
@@ -34,29 +34,33 @@
         </article>
         <section class="purchaseBox">
             <h1 class="name">Porta 6 Tejo</h1>
-                <p class="subtle">Portugal, Tejo</p>
-                <p class="describe">
-                    This is the most Portuguese thing you will find on the Mosel. Two grapes varieties that thrive in
-                    the slate valley of the Douro, Arinto & Fernao Pires which the magical winemaker Jan Klein has
-                    turned into a yeasty smooth as good as a Portuguese egg tart - Pet Nat!
-                </p>
+            <p class="subtle">Portugal, Tejo</p>
+            <p class="describe">
+                This is the most Portuguese thing you will find on the Mosel. Two grapes varieties that thrive in
+                the slate valley of the Douro, Arinto & Fernao Pires which the magical winemaker Jan Klein has
+                turned into a yeasty smooth as good as a Portuguese egg tart - Pet Nat!
+            </p>
 
 
-                <section class="info">
-                    <h2>Product Information</h2>
-                    <dl>
-                        <dt>Percentage</dt>
-                        <dd class="percentage">13%</dd>
-                        <dt>Size</dt>
-                        <dd class="size">750 ml</dd>
-                        <dt>Texture</dt>
-                        <dd class="texture">normal</dd>
-                    </dl>
-                    <h3>Price</h3>
-                    <h2 class="price">129DKK</h2>
-                </section>
+            <section class="info">
+                <h2>Product Information</h2>
+                <dl>
+                    <dt>Percentage</dt>
+                    <dd class="percentage">13%</dd>
+                    <dt>Size</dt>
+                    <dd class="size">750 ml</dd>
+                    <dt>Texture</dt>
+                    <dd class="texture">normal</dd>
+                </dl>
+                <h3>Price</h3>
+                <h2 class="price">129DKK</h2>
+            </section>
         </section>
         <script src="product.js"></script>
+        <footer>
+            <p>Contact | Privacy | Legal Notice</p>
+            <p class="copyright">The Winers © 2021</p>
+        </footer>
     </body>
 
 </html>
