--- a/index.html
+++ b/index.html
@@ -1,96 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Winers</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://use.typekit.net/fgj3jvj.css" />
-  </head>
 
-  <header>
-    <nav>
-      <div class="logo"><a href="index.html">Wine</a></div>
-      <ul>
-        <li><a href="index.html">home</a></li>
-        <li><a href="productlist.html?redwine">red</a></li>
-        <li><a href="productlist.html?whitewine">white </a></li>
-        <li><a href="productlist.html?rose">rose</a></li>
-        <li><a href="about.html"> about </a></li>
-      </ul>
-    </nav>
-  </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>The Winers</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://use.typekit.net/fgj3jvj.css" />
+</head>
 
-  <body>
-    <main>
-      <h1 class="wineh1">A Wine Guide For The Youth</h1>
-      <p class="introtext">
-        Lorem Ipsum is simply dummy text of the printing and typesetting
-        industry. Lorem Ipsum has been the industry's standard dummy text ever
-        since the 1500s, when an unknown printer took a galley of type and
-        scrambled it to make a type specimen book. It has survived not only five
-        centuries, but also the leap into electronic typesetting, remaining
-        essentially unchanged. It was popularised in the 1960s with the release
-        of Letraset sheets containing Lorem Ipsum passages, and more recently
-        with desktop publishing software like Aldus PageMaker including versions
-        of Lorem Ipsum.
-      </p>
-      <h2 class="categoryh2">Categories</h2>
+<header>
+  <nav>
+    <div class="logo"><a href="index.html">Wine</a></div>
+    <ul>
+      <li><a href="index.html">home</a></li>
+      <li><a href="productlist.html?redwine">red</a></li>
+      <li><a href="productlist.html?whitewine">white </a></li>
+      <li><a href="productlist.html?rose">rose</a></li>
+      <li><a href="about.html"> about </a></li>
+    </ul>
+  </nav>
+</header>
 
-      <div class="container">
-        <div class="card">
-          <div class="face face1">
-            <div class="content">
-              <img src="/img/redwine_white.svg" />
-              <h3>Red Wine</h3>
-            </div>
-          </div>
-          <div class="face face2">
-            <div class="content">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-                cum cumque minus iste veritatis provident at.
-              </p>
-              <button class="custom-btn btn-16">Read More </button> 
-            </div>
+<body>
+  <main>
+    <h1 class="wineh1">A Wine Guide For The Youth</h1>
+    <p class="introtext">
+      Lorem Ipsum is simply dummy text of the printing and typesetting
+      industry. Lorem Ipsum has been the industry's standard dummy text ever
+      since the 1500s, when an unknown printer took a galley of type and
+      scrambled it to make a type specimen book. It has survived not only five
+      centuries, but also the leap into electronic typesetting, remaining
+      essentially unchanged. It was popularised in the 1960s with the release
+      of Letraset sheets containing Lorem Ipsum passages, and more recently
+      with desktop publishing software like Aldus PageMaker including versions
+      of Lorem Ipsum.
+    </p>
+    <h2 class="categoryh2">Categories</h2>
+
+    <div class="container">
+      <div class="card">
+        <div class="face face1">
+          <div class="content">
+            <img src="/img/redwine_white.svg" />
+            <h3>Red Wine</h3>
           </div>
         </div>
-        <div class="card">
-          <div class="face face1">
-            <div class="content">
-              <img src="/img/whitewine_white.svg" />
-              <h3>White Wine</h3>
-            </div>
-          </div>
-          <div class="face face2">
-            <div class="content">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-                cum cumque minus iste veritatis provident at.
-              </p>
-              <button class="custom-btn btn-16">Read More</button>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="face face1">
-            <div class="content">
-              <img src="/img/sparkling.svg" />
-              <h3>Sparkling</h3>
-            </div>
-          </div>
-          <div class="face face2">
-            <div class="content">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-                cum cumque minus iste veritatis provident at.
-              </p>
-              <button class="custom-btn btn-16">Read More</button>
-            </div>
+        <div class="face face2">
+          <div class="content">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+              cum cumque minus iste veritatis provident at.
+            </p>
+            <button class="custom-btn btn-16">Read More </button>
           </div>
         </div>
       </div>
-    </main>
-  </body>
+      <div class="card">
+        <div class="face face1">
+          <div class="content">
+            <img src="/img/whitewine_white.svg" />
+            <h3>White Wine</h3>
+          </div>
+        </div>
+        <div class="face face2">
+          <div class="content">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+              cum cumque minus iste veritatis provident at.
+            </p>
+            <button class="custom-btn btn-16">Read More</button>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="face face1">
+          <div class="content">
+            <img src="/img/sparkling.svg" />
+            <h3>Sparkling</h3>
+          </div>
+        </div>
+        <div class="face face2">
+          <div class="content">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+              cum cumque minus iste veritatis provident at.
+            </p>
+            <button class="custom-btn btn-16">Read More</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+  <footer>
+    <p>Contact | Privacy | Legal Notice</p>
+    <p class="copyright">The Winers © 2021</p>
+  </footer>
+</body>
+
 </html>
