--- a/productlist.html
+++ b/productlist.html
@@ -31,7 +31,7 @@
             </a>
             <p class="region">Loire, Frankrig</p>
             <p class="grape">Verdejo</p>
-            <p class="price"> DKK 189-</p>
+            <p class="price"> DKK 189,-</p>
 
         </article>
         <article class="smallProduct"><a href="product.html?id=613625d2d943be7d0009fcbc">
@@ -39,8 +39,9 @@
                 <h3>Stéphane Delettre - Chardons</h3>
             </a>
             <p class="region">Loire, Frankrig</p>
-            <p class="price"> DKK 189,-</p>
             <p class="grape">Verdejo</p>
+
+            <p class="price"> DKK 189,-</p>
         </article>
 
         <article class="smallProduct"><a href="product.html?id=613625d2d943be7d0009fcbc">
@@ -48,8 +49,9 @@
                 <h3>Stéphane Delettre - Chardons</h3>
             </a>
             <p class="region">Loire, Frankrig</p>
-            <p class="price"> DKK 189,-</p>
             <p class="grape">Verdejo</p>
+
+            <p class="price"> DKK 189,-</p>
 
         </article>
         <article class="smallProduct"><a href="product.html?id=613625d2d943be7d0009fcbc">
@@ -57,8 +59,9 @@
                 <h3>Stéphane Delettre - Chardons</h3>
             </a>
             <p class="region">Loire, Frankrig</p>
-            <p class="price"> DKK 189,-</p>
             <p class="grape">Verdejo</p>
+
+            <p class="price"> DKK 189,-</p>
         </article>
 
 
@@ -68,9 +71,8 @@
                 <h3>Stéphane Delettre - Chardons</h3>
             </a>
             <p class="region">Loire, Frankrig</p>
-            <p class="price"> DKK 189,-</p>
             <p class="grape">Verdejo</p>
-
+            <p class="price"> DKK 189,-</p>
         </article>
 
         <article class="smallProduct"><a href="product.html?id=613625d2d943be7d0009fcbc">
@@ -78,14 +80,15 @@
                 <h3>Stéphane Delettre - Chardons</h3>
             </a>
             <p class="region">Loire, Frankrig</p>
-            <p class="price"> DKK 189,-</p>
             <p class="grape">Verdejo</p>
+            <p class="price"> DKK 189,-</p>
 
 
         </article>
     </main>
     <footer>
-        <p>Terms & Conditions | Privacy | Legal Notice</p>
+        <p>Contact | Privacy | Legal Notice</p>
+        <p class="copyright">The Winers © 2021</p>
     </footer>
 
 </body>
