Fixed problems with merging

--- a/productlist.html
+++ b/productlist.html
@@ -85,6 +85,7 @@
         </article>
     </main>
     <footer>
+        <p class="copyright">The Winers © 2021</p>
         <p>Terms & Conditions | Privacy | Legal Notice</p>
     </footer>
 
