javascript latest update

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
       <div class="logo"><a href="index.html">Wine</a></div>
       <ul>
         <li><a href="index.html">home</a></li>
-        <li><a href="productlist.html?redwine">red</a></li>
-        <li><a href="productlist.html?whitewine">white </a></li>
-        <li><a href="productlist.html?rose">rose</a></li>
+        <li>
+          <a href="productlist.html?colour=red">red</a>
+        </li>
+        <li><a href="productlist.html?colour=white">white </a></li>
+        <li><a href="productlist.html?colour=rose">rose</a></li>
         <li><a href="about.html"> about </a></li>
       </ul>
     </nav>
@@ -52,7 +54,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
                 cum cumque minus iste veritatis provident at.
               </p>
-              <a href="productlist.html" class="custom-btn">Read More </a> 
+              <a href="productlist.html" class="custom-btn">Read More </a>
             </div>
           </div>
         </div>
@@ -92,5 +94,6 @@
         </div>
       </div>
     </main>
+    <script src="productlist.js"></script>
   </body>
 </html>
